--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,28 @@
 <% if @posts.count > 0 %>
-    <% color = nil %>
     <% @posts.each do |post| %>
-        <% color = if color.nil? || color == 'three' %>
-            <% 'one' %>
-        <% elsif color == 'one' %>
-            <% 'two' %>
-        <% else %>
-            <% 'three' %>
-        <% end %>
-        <div id="<%= dom_id(post) %>" class="container container-<%= color %>">
-          <header>
-            <%= post.title %> by <%= post.user.name %>
-          </header>
-          <main><%= post.body %></main>
-          <footer><%= post.tags %>
-            <% if post.user == @current_user %>
-                <%= button_to 'Show', post, method: :get, class: 'show' %>
+        <div id="<%= dom_id(post) %>" class="container">
+          <% if post.user == @current_user %>
+              <header>
+                <% button_to 'Show', post, method: :get, class: 'show' %>
                 <%= button_to 'Edit', edit_post_path(post), method: :get, class: 'edit' %>
                 <%= button_to 'Destroy', post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'} %>
-            <% end %>
-          </footer>
+              </header>
+          <% end %>
+          <main><h3 class="post-title"><%= post.title %></h3>
+
+            <div class="post-header">
+<span class="post-labels">
+<% post.tags.split(%r{,+\s+|,+|\s+}).each do |tag| %>
+  <%= link_to tag, "/##{tag}" %>
+  <% end %>
+</span>
+<span class="post-credits">
+Author: <%= post.user.name %>
+  on <%= post.created_at.strftime("%H:%M, %d %B %Y") %>
+</span>
+            </div>
+            <p><%= post.body %></main>
+          </p>
         </div>
     <% end %>
 <% else %>
