--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,5 +26,5 @@ Author: <%= post.user.name %>
         </div>
     <% end %>
 <% else %>
-    There are no posts yet.
+    No posts found.
 <% end %>
