--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <ul>
       <li><%= link_to 'Home', root_path %></li>
       <li><%= link_to 'New Post', new_post_path if @current_user %></li>
+      <li><%= form_tag root_path, method: :get, class: 'search' do %>
+            <%= search_field_tag :search, params[:search], placeholder: 'Search', value: params[:search] %>
+            <%= submit_tag 'Search', name: nil %>
+        <% end %></li>
     </ul>
     <ul>
       <% if @current_user %>
