--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,9 +1,19 @@
 .container {
   @include container();
   padding: 0 25px;
-  header {
+
+  footer {
     background: none;
-    justify-content: flex-end;
+    justify-content: flex-start;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  .button_to:nth-child(2) {
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
@@ -35,20 +45,7 @@ h3.post-title {
   letter-spacing: 1px;
 }
 
-input[type=submit].show {
-  @include button(map-get($colors, green), $size: 0.85);
-  margin: 5px 5px 0;
-}
-input[type=submit].edit {
-  @include button(map-get($colors, yellow), $size: 0.85);
-  margin: 5px 5px 0;
-}
-input[type=submit].delete {
-  @include button(map-get($colors, red), $size: 0.85);
-  margin: 5px 5px 0;
-}
-
-.field{
+.field {
   @include form_group();
 
   textarea {
