--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,26 @@
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<div class="container">
+  <main><h3 class="post-title"><%= @post.title %></h3>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+    <div class="post-header">
+<span class="post-labels">
+<% @post.tags.split(%r{,+\s+|,+|\s+}).each do |tag| %>
+  <%= link_to tag, "/##{tag}" %>
+  <% end %>
+</span>
+<span class="post-credits">
+Author: <%= @post.user.name %>
+  on <%= @post.created_at.strftime("%H:%M, %d %B %Y") %>
+</span>
+    </div>
+    <p><%= @post.body %></p>
+  </main>
+  <footer>
+    <%= button_to 'Back', root_path, method: :get %>
+    <% if @post.user.id == session[:user_id] %>
+        <% button_to 'Show', @post, method: :get, class: 'show' %>
+        <%= button_to 'Edit', edit_post_path(@post), method: :get, class: 'edit' %>
+        <%= button_to 'Destroy', @post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'} %>
+    <% end %>
+  </footer>
+</div>
 
-<p>
-  <strong>Tags:</strong>
-  <%= @post.tags %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
