--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,17 +29,17 @@
 
 form {
   @include form();
-}
 
-.username, .email, .password, .password_confirmation {
-  @include form_group();
-  input {
-    margin: 0 auto;
+  .username, .email, .password, .password_confirmation {
+    @include form_group();
+    input {
+      margin: 0 auto;
+    }
   }
-}
 
-.submit input {
-  @include button($primary-color);
+  input[type=submit] {
+    @include button($primary-color);
+  }
 }
 
 form.search {
@@ -56,16 +56,16 @@ form.search {
 // Perturbator theme
 .navbar {
   background-color: #1A1A1A;
-  nav > ul > li > a:not([role=button]) {
+  nav ul li a:not([role=button]) {
     color: #E424F0;
   }
-  nav > ul > li > a:not([role=button]):hover {
+  nav ul li a:not([role=button]):hover {
     color: #E424F0;
     text-decoration: underline;
     background-color: #262626;
     border-color: #E424F0;
   }
-  nav > ul > li {
+  nav ul li {
     color: #6C89E5;
   }
 }
@@ -77,7 +77,7 @@ form.search {
     color: #C70D0C;
   }
   :focus {
-    box-shadow: inset 0px 0px 0px 2px #7E71D0;
+    box-shadow: inset 0 0 0 2px #7E71D0;
   }
   input[type=submit] {
     background-color: #262626;
@@ -114,6 +114,12 @@ a {
   }
 }
 
+.alert {
+  background-color: #262626;
+  border-color: red;
+  color: red;
+}
+
 .logo, h1 {
   color: #6C89E5;
 }
@@ -133,34 +139,30 @@ a {
   }
 }
 
-input[type] {
-  background-color: #262626;
-  border-color: #262626;
-  color: #C70D0C;
-}
+form {
+  input[type] {
+    background-color: #262626;
+    border-color: #262626;
+    color: #C70D0C;
+  }
 
-input[type]:focus, textarea:focus {
-  box-shadow: inset 0px 0px 0px 2px #7E71D0;
-}
+  input[type]:focus, textarea:focus {
+    box-shadow: inset 0 0 0 2px #7E71D0;
+  }
 
-input[type=submit] {
-  background-color: #262626;
-  border-color: #E424F0;
-  color: #E424F0;
-}
+  input[type=submit] {
+    background-color: #262626;
+    border-color: #E424F0;
+    color: #E424F0;
+  }
 
-textarea {
-  background-color: #262626;
-  border-color: #262626;
-  color: #C70D0C;
-}
+  textarea {
+    background-color: #262626;
+    border-color: #262626;
+    color: #C70D0C;
+  }
 
-label {
-  color: #5A6DD0;
-}
-
-.alert {
-  background-color: #262626;
-  border-color: red;
-  color: red;
+  label {
+    color: #5A6DD0;
+  }
 }
