--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,7 @@
     </ul>
     <ul>
       <% if @current_user %>
-          <li><%= @current_user.name %>
-          <li>
+          <li><%= @current_user.name %></li>
           <li><%= link_to "Log Out", log_out_path %></li>
       <% else %>
           <li><%= link_to "Sign Up", new_user_path %></li>
