--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,20 +1,15 @@
 = form_for(@post) do |f|
-  - if @post.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@post.errors.count, "error")
-        prohibited this post from being saved:
-      %ul
-        - @post.errors.full_messages.each do |message|
-          %li= message
-  .field
+  %div{ class: "#{post_field_class(:title)}" }
     = f.label :title
     = f.text_field :title
-  .field
+    %p= post_error_message(:title)
+  %div{ class: "#{post_field_class(:body)}" }
     = f.label :body
     = f.text_area :body
-  .field
+    %p= post_error_message(:body)
+  %div{ class: "#{post_field_class(:tags)}" }
     = f.label :tags
     = f.text_field :tags
+    %p= post_error_message(:tags)
   .submit
     = f.submit
