--- a/app/views/shared/_promo.html.haml
+++ b/app/views/shared/_promo.html.haml
@@ -1,5 +1,5 @@
 = javascript_tag do
-  $(document).on('ready page:load', function () {
+  $(document).ready( function() {
   k$.growl({
   title: 'GeekHub',
   text: 'Get practical knowledge of IT.',
