--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,20 +1,1 @@
-- if @posts.count > 0
-  - @posts.each do |post|
-    .container{:id => "#{dom_id(post)}"}
-      %main
-        %h3.post-title= post.title
-        .post-header
-          %span.post-labels
-            - post.tags.split(%r{,+\s+|,+|\s+}).each do |tag|
-              = link_to tag, "/##{tag}"
-          %span.post-credits
-            Author: #{post.user.name}
-            on #{post.created_at.strftime("%H:%M, %d %B %Y")}
-        %div= markdown(post.body)
-      - if post.user.id == session[:user_id]
-        %footer
-          - button_to 'Show', post, method: :get, class: 'show'
-          = button_to 'Edit', edit_post_path(post), method: :get, class: 'edit'
-          = button_to 'Destroy', post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'}
-- else
-  No posts found.
+= render(@posts) || 'No posts found.'
