--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,9 @@
               = submit_tag 'Search', name: nil
         %ul
           - if current_user
-            %li= current_user.name
+            %li
+              = gravatar(current_user)
+              = current_user.name
             %li= link_to "Log Out", log_out_path
           - else
             %li= link_to "Sign Up", new_user_path
