--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,17 +1,1 @@
-.container
-  %main
-    %h3.post-title= @post.title
-    .post-header
-      %span.post-labels
-        - @post.tags.split(%r{,+\s+|,+|\s+}).each do |tag|
-          = link_to tag, "/##{tag}"
-      %span.post-credits
-        Author: #{@post.user.name}
-        on #{@post.created_at.strftime("%H:%M, %d %B %Y")}
-    %div= markdown(@post.body)
-  %footer
-    = button_to 'Back', root_path, method: :get
-    - if @post.user.id == session[:user_id]
-      - button_to 'Show', @post, method: :get, class: 'show'
-      = button_to 'Edit', edit_post_path(@post), method: :get, class: 'edit'
-      = button_to 'Destroy', @post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'}
+=render @post
