Add post rating and voting actions

--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,5 +1,5 @@
 .container{id: "#{dom_id(post)}"}
-  %main
+  %header
     %h3.post-title= post.title
     .post-header
       %span.post-labels
@@ -10,10 +10,15 @@
         = post.user.name
         on
         = post.created_at.strftime("%H:%M, %d %B %Y")
+  %main
     %div= markdown(post.body)
-  %footer
     = button_to 'Back', root_path, method: :get if action_name == 'show'
     - if post.user == current_user
       - button_to 'Show', post, method: :get, class: 'show'
       = button_to 'Edit', edit_post_path(post), method: :get, class: 'edit'
       = button_to 'Destroy', post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'}
+  %footer
+    - if current_user
+      - unless post.user == current_user
+        = button_to 'Like', like_post_path(post), method: :put
+        = button_to 'Dislike', dislike_post_path(post), method: :put
