--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,1 +1,3 @@
 =render @post
+=render partial: 'comments/form', locals: { post: @post }
+=render partial: 'comments/comment', collection: @post.comments.all
