--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -4,7 +4,7 @@
     .post-header
       %span.post-labels
         - post.tags.split(%r{,+\s+|,+|\s+}).each do |tag|
-          = link_to tag, "/##{tag}"
+          = link_to tag, posts_path(tag: tag)
       %span.post-credits
         = gravatar(post.user)
         = post.user.name
