--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
         %ul
           %li= link_to 'Home', root_path
           %li= link_to 'Popular', popular_posts_path
+          %li= link_to 'Active', active_posts_path
           %li
             = form_tag action_name == 'popular' ? popular_posts_path : root_path, method: :get, class: 'search' do
               = search_field_tag :search, params[:search], placeholder: 'Search', value: params[:search]
