Add styling to comments

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,10 +1,7 @@
-.container{id: "#{dom_id(comment)}"}
+.container.comment{id: "#{dom_id(comment)}"}
   %header
-    .comment-header
-      %span.comment-credits
-        = gravatar(comment.user)
-        = comment.user.name
-        on
-        = comment.created_at.strftime("%H:%M, %d %B %Y")
+    %span
+      = gravatar(comment.user)
+      = "#{comment.user.name} on #{comment.created_at.strftime("%H:%M, %d %B %Y")}"
   %main
-    %div= comment.body
+    = comment.body
