--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,4 +1,4 @@
-.container{id: "#{dom_id(post)}"}
+.container.post{id: "#{dom_id(post)}"}
   %main
     %h3.post-title= post.title
     .post-header
