--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,192 +1,11 @@
 @import "kickstart_rails";
 @import "simplemde.min.css";
-@import "posts";
+
 // fonts
 @import url(https://fonts.googleapis.com/css?family=Orbitron:500);
 
-.logo {
-  @include column(4, 4);
-  text-align: center;
-  h1 {
-    font-family: 'Orbitron', sans-serif;
-  }
-}
+@import "main";
+@import "posts";
+@import "comments";
+@import "theme";
 
-.content {
-  @include wrapper($fluid: true);
-}
-
-.navbar {
-  @include navbar();
-}
-
-.alert {
-  @include alert();
-}
-
-.centralize {
-  text-align: center;
-}
-
-form {
-  @include form();
-
-  .group {
-    @include form_group();
-  }
-
-  textarea {
-    width: 400px;
-    height: 200px;
-  }
-
-  .center input {
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  input[type=submit] {
-    @include button($primary-color);
-  }
-}
-
-form.search {
-  margin: 0;
-  input {
-    display: inline;
-  }
-  input[type=submit] {
-    @include button($primary-color, $size: 0.95);
-    margin: 0 0 2.5px 3px;
-  }
-}
-
-table {
-  @include table();
-}
-
-// Perturbator theme
-.navbar {
-  background-color: #1A1A1A;
-  nav ul li a:not([role=button]) {
-    color: #E424F0;
-  }
-  nav ul li a:not([role=button]):hover {
-    color: #E424F0;
-    text-decoration: underline;
-    background-color: #262626;
-    border-color: #E424F0;
-  }
-  nav ul li {
-    color: #6C89E5;
-  }
-}
-
-form.search {
-  input {
-    background-color: #262626;
-    border-color: #262626;
-    color: #C70D0C;
-  }
-  :focus {
-    box-shadow: inset 0 0 0 2px #7E71D0;
-  }
-  input[type=submit] {
-    background-color: #262626;
-    border-color: #E424F0;
-    color: #E424F0;
-  }
-}
-
-::-webkit-input-placeholder {
-  color: #6C89E5;
-}
-
-:-moz-placeholder { /* Firefox 18- */
-  color: #6C89E5;
-}
-
-::-moz-placeholder { /* Firefox 19+ */
-  color: #6C89E5;
-}
-
-:-ms-input-placeholder {
-  color: #6C89E5;
-}
-
-body {
-  background-color: #000000;
-  color: #5A6DD0;
-}
-
-a {
-  color: #E424F0;
-  :hover {
-    text-decoration: underline;
-  }
-}
-
-.alert {
-  background-color: #262626;
-  border-color: red;
-  color: red;
-}
-
-.logo, h1 {
-  color: #6C89E5;
-}
-
-.container {
-  background-color: #1A1A1A;
-  border-color: #1A1A1A;
-  h3 {
-    color: #5A6DD0;
-  }
-  .post-credits {
-    color: #C70D0C;
-  }
-
-  p {
-    color: #5A6DD0;
-  }
-}
-
-form {
-  input[type] {
-    background-color: #262626;
-    border-color: #262626;
-    color: #C70D0C;
-  }
-
-  input[type]:focus, textarea:focus {
-    box-shadow: inset 0 0 0 2px #7E71D0;
-  }
-
-  input[type=submit] {
-    background-color: #262626;
-    border-color: #E424F0;
-    color: #E424F0;
-  }
-
-  textarea {
-    background-color: #262626;
-    border-color: #262626;
-    color: #C70D0C;
-  }
-
-  label {
-    color: #5A6DD0;
-  }
-}
-
-.editor-toolbar {
-  background-color: #fff;
-}
-
-.CodeMirror {
-  background-color: #262626;
-}
-
-.CodeMirror-code {
-  color: #C70D0C;
-}
