Add post cover image field, styles for likes, comments counter

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "kickstart_rails";
 @import "simplemde.min.css";
+@import "font-awesome";
 
 // fonts
 @import url(https://fonts.googleapis.com/css?family=Orbitron:500);
