--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,45 +1,78 @@
 .post {
   padding: 0 25px;
 
+  header {
+    background: none;
+    padding-top: 15px;
+    display: block;
+
+    .post-title {
+      margin-bottom: 15px;
+      padding: 0;
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      line-height: 1.25;
+      font-size: 1.8rem;
+    }
+
+    .post-datetime {
+      float: left;
+      font: italic normal 11px 'Source Sans Pro', sans-serif;
+      margin: 10px 0 25px 0;
+      display: inherit;
+      line-height: 1.25;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .post-author {
+      float: right;
+    }
+  }
+
+  main {
+    .post-labels {
+      margin: 10px 0 0 0;
+      display: block;
+    }
+  }
+
   footer {
     background: none;
-    justify-content: flex-start;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .button_to:nth-child(2) {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  h3.post-title {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    line-height: 1.25;
-  }
-
-  .post-header {
-    margin-bottom: 15px;
-    line-height: 1.0;
-  }
-
-  .post-header .post-labels {
-    margin: 10px 0 0 0;
     display: block;
-  }
 
-  .post-credits {
-    font: italic normal 11px 'Source Sans Pro', sans-serif;
-    margin: 10px 0 25px 0;
-    display: inherit;
-    line-height: 1.25;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    .post-likes {
+      float: right;
+      display: flex;
+
+      .like {
+        background-color: green;
+      }
+      .dislike {
+        background-color: red;
+      }
+
+      .post-rating {
+        color: green;
+        height: 36px;
+        font-size: 18px;
+        line-height: 36px;
+        padding: 0 10px;
+      }
+      .negative {
+        color: red;
+      }
+    }
+
+    .post-buttons {
+      float: right;
+      display: flex;
+
+      .button_to:nth-child(2) {
+        margin-left: 5px;
+        margin-right: 5px;
+      }
+    }
   }
 }
