--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,8 +30,8 @@
         %ul
           - if current_user
             %li
-              = gravatar(current_user)
-              = current_user.name
+              = link_to user_path(current_user) do
+                = gravatar(current_user) + current_user.name
             %li= link_to 'New Post', new_post_path
             %li= link_to "Log Out", log_out_path
           - else
