Add random user name generator if name not set

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -42,6 +42,13 @@
     background: none;
     display: block;
 
+    .post-stats {
+      float: left;
+      height: 36px;
+      font-size: 18px;
+      line-height: 36px;
+    }
+
     .post-likes {
       float: right;
       display: flex;
