--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -32,15 +32,45 @@
   }
 
   main {
-    .post-labels {
-      margin: 10px 0 0 0;
-      display: block;
+    display: block;
+
+    .post-cover-image {
+      position:relative;
+      display:inline-block;
+      overflow:hidden;
+      width:100%;
+      height:100%;
+      padding-bottom: 15px;
+
+      img {
+        max-width: 800px;
+        max-height:100%;
+        display:block;
+        margin:auto;
+      }
+    }
+  }
+
+  .preview {
+    display: flex;
+
+    .post-cover-image {
+      margin-right: 10px;
+      max-width: 300px;
+      img {
+        max-width: 100%;
+      }
     }
   }
 
   footer {
     background: none;
     display: block;
+
+    .post-labels {
+      margin: 10px 0 0 0;
+      display: block;
+    }
 
     .post-stats {
       float: left;
