--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -8,29 +8,37 @@
         = link_to user_path(post.user) do
           = post.user.name
           = gravatar(post.user)
-  %main
-    %div= markdown(post.body)
-    .post-labels
-      - post.tags.split(%r{,+\s+|,+|\s+}).each do |tag|
-        - if params[:mode]
-          = link_to tag, posts_path(tag: tag, mode: params[:mode])
-        - else
-          = link_to tag, posts_path(tag: tag)
+  %main{class: ('preview' unless action_name == 'show')}
+    - unless post.cover_image.blank?
+      .post-cover-image
+        = image_tag(post.cover_image)
+    .post-body
+      - if action_name == 'show'
+        = markdown(post.body)
+      - else
+        %p= truncate(strip_tags(markdown(post.body)), length: 400, separator: '.', omission: '.')
   %footer
-    .post-stats
-      = link_to post_path(post, anchor: 'comments') do
-        = fa_icon 'comments'
-        = post.comments.count
-      = fa_icon 'star'
-    .post-likes
-      = button_to like_post_path(post), method: :put, class: 'like' do
-        = fa_icon 'thumbs-o-up'
-      %span.post-rating{ class: ('negative' if post.rating < 0) }
-        = post.rating
-      = button_to dislike_post_path(post), method: :put, class: 'dislike' do
-        = fa_icon 'thumbs-o-down'
-    .post-buttons
-      = button_to 'Back', root_path, method: :get if action_name == 'show'
-      - if post.user == current_user
-        = button_to 'Edit', edit_post_path(post), method: :get, class: 'edit'
-        = button_to 'Destroy', post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'}
+    .post-labels
+    - post.tags.split(%r{,+\s+|,+|\s+}).each do |tag|
+      - if params[:mode]
+        = link_to tag, posts_path(tag: tag, mode: params[:mode])
+      - else
+        = link_to tag, posts_path(tag: tag)
+    .post-stats-wrap
+      .post-stats
+        = link_to post_path(post, anchor: 'comments') do
+          = fa_icon 'comments'
+          = post.comments.count
+        = fa_icon 'star'
+        = link_to 'Read more', post_path(post)
+      .post-likes
+        = button_to like_post_path(post), method: :put, class: 'like' do
+          = fa_icon 'thumbs-o-up'
+        %span.post-rating{ class: ('negative' if post.rating < 0) }
+          = post.rating
+        = button_to dislike_post_path(post), method: :put, class: 'dislike' do
+          = fa_icon 'thumbs-o-down'
+      .post-buttons
+        - if post.user == current_user
+          = button_to 'Edit', edit_post_path(post), method: :get, class: 'edit'
+          = button_to 'Destroy', post, class: 'delete', method: :delete, data: {confirm: 'Are you sure?'}
