--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -27,16 +27,24 @@
     .post-stats-wrap
       .post-stats
         = link_to post_path(post, anchor: 'comments') do
-          = fa_icon 'comments'
+          - if post.commenters.exists?(current_user)
+            = fa_icon 'comments'
+          - else
+            = fa_icon 'comments-o'
           = post.comments.count
-        = fa_icon 'star'
+        = link_to star_post_path(post), method: :post do
+          - if post.starred_users.exists?(current_user)
+            = fa_icon 'star'
+          - else
+            = fa_icon 'star-o'
+          = post.starred_users.count
         = link_to 'Read more', post_path(post)
       .post-likes
-        = button_to like_post_path(post), method: :put, class: 'like' do
+        = button_to like_post_path(post), class: 'like' do
           = fa_icon 'thumbs-o-up'
         %span.post-rating{ class: ('negative' if post.rating < 0) }
           = post.rating
-        = button_to dislike_post_path(post), method: :put, class: 'dislike' do
+        = button_to dislike_post_path(post), class: 'dislike' do
           = fa_icon 'thumbs-o-down'
       .post-buttons
         - if post.user == current_user
