--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
               = link_to 'Active', posts_path(mode: 'active', tag: params[:tag])
             - else
               = link_to 'Active', posts_path(mode: 'active')
+          %li= link_to 'Authors', users_path
           %li
             = form_tag posts_path, method: :get, class: 'search' do
               = search_field_tag :search, params[:search], placeholder: 'Search', value: params[:search]
