--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,5 +2,35 @@
   %strong Name:
   = @user.name
 %p
-  %strong Email:
-  = @user.email
+  %strong Gravatar:
+  = gravatar(@user)
+%p
+  %strong Rating:
+  = @user.rating
+
+%h4 Posts
+%table
+  %tr
+    %th Title
+    %th Rating
+  - @user.posts.each do |post|
+    %tr
+      %td= link_to post.title, post_path(post)
+      %td= post.rating
+
+%h4 Starred posts
+%table
+  %tr
+    %th Title
+    %th Author
+    - if @user == current_user
+      %th Unstar
+  - @user.starred_posts.each do |post|
+    %tr
+      %td= link_to post.title, post_path(post)
+      %td
+        = link_to user_path(post.user) do
+          = post.user.name
+          = gravatar(post.user)
+      - if @user == current_user
+        %td= link_to 'Unstar', star_post_path(post), method: :post
