Add style for tags and navbar links active state

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -65,5 +65,8 @@ form.search {
 }
 
 table {
-  @include table();
+  @include table($blank: true, $zebra: true);
+  tr:hover {
+    border: 1px solid #47A5DF;
+  }
 }
