--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,15 +13,26 @@
           %li= link_to 'Home', root_path
           %li
             - if params[:tag]
-              = link_to 'Popular', posts_path(mode: 'popular', tag: params[:tag])
+              = link_to 'Popular',
+                  posts_path(mode: 'popular', tag: params[:tag]),
+                  class: ('active' if params[:mode] == 'popular')
             - else
-              = link_to 'Popular', posts_path(mode: 'popular')
+              = link_to 'Popular',
+                  posts_path(mode: 'popular'),
+                  class: ('active' if params[:mode] == 'popular')
           %li
             - if params[:tag]
-              = link_to 'Active', posts_path(mode: 'active', tag: params[:tag])
+              = link_to 'Active', posts_path(mode: 'active',
+                  tag: params[:tag]),
+                  class: ('active' if params[:mode] == 'active')
             - else
-              = link_to 'Active', posts_path(mode: 'active')
-          %li= link_to 'Authors', users_path
+              = link_to 'Active',
+                  posts_path(mode: 'active'),
+                  class: ('active' if params[:mode] == 'active')
+          %li
+            = link_to 'Authors',
+                users_path,
+                class: ('active' if current_page?(users_path))
           %li
             = form_tag posts_path, method: :get, class: 'search' do
               = search_field_tag :search, params[:search], placeholder: 'Search', value: params[:search]
@@ -31,13 +42,20 @@
         %ul
           - if current_user
             %li
-              = link_to user_path(current_user) do
+              = link_to user_path(current_user),
+                  class: ('active' if current_page?(user_path(current_user))) do
                 = gravatar(current_user) + current_user.name
-            %li= link_to 'New Post', new_post_path
+            %li
+              = link_to 'New Post', new_post_path,
+                  class: ('active' if current_page?(new_post_path))
             %li= link_to "Log Out", log_out_path
           - else
-            %li= link_to "Sign Up", new_user_path
-            %li= link_to "Log In", log_in_path
+            %li
+              = link_to "Sign Up", new_user_path,
+                 class: ('active' if current_page?(new_user_path))
+            %li
+              = link_to "Log In", log_in_path,
+                 class: ('active' if current_page?(log_in_path))
     .logo
       %h1 RoR coding notes
     .content
