--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,9 +5,10 @@
     background: none;
     padding-top: 15px;
     display: block;
+    margin-bottom: 0;
 
     .post-title {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       padding: 0;
       text-decoration: none;
       text-transform: uppercase;
@@ -16,30 +17,25 @@
       font-size: 1.8rem;
     }
 
-    .post-datetime {
-      float: left;
-      font: italic normal 11px 'Source Sans Pro', sans-serif;
-      margin: 10px 0 25px 0;
-      display: inherit;
-      line-height: 1.25;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
+    .post-credits {
+      display: flex;
+      justify-content: space-between;
 
-    .post-author {
-      float: right;
+      .post-datetime {
+        font: italic normal 11px 'Source Sans Pro', sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 8.5px 0;
+      }
+
+      .post-author {
+      }
     }
   }
 
   main {
-    display: block;
-
     .post-cover-image {
-      position:relative;
-      display:inline-block;
-      overflow:hidden;
       width:100%;
-      height:100%;
       padding-bottom: 15px;
 
       img {
@@ -54,23 +50,25 @@
         height: 700px;
         display:block;
         margin:auto;
+        padding: 0;
       }
     }
   }
 
   .preview {
-    display: flex;
-
     .post-cover-image {
-      margin-right: 10px;
-      max-width: 300px;
+      float: left;
+      margin-right: 15px;
+      max-width: 200px;
+
       img {
-        max-width: 100%;
+        width: 100%;
+        height: 100%;
       }
 
       iframe {
-        max-width: 300px;
-        max-height: 300px;
+        width: 200px;
+        height: 200px;
       }
     }
   }
@@ -81,6 +79,7 @@
 
     .post-labels {
       display: block;
+      padding-bottom: 15px;
 
       .tag {
           @include label(map-get($colors, blue));
@@ -100,6 +99,10 @@
       height: 36px;
       font-size: 18px;
       line-height: 36px;
+
+      a {
+        padding-right: 5px;
+      }
     }
 
     .post-likes {
