--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -12,7 +12,7 @@
     - unless post.cover_image.blank?
       .post-cover-image
         - if post.cover_image.include?('bandcamp.com')
-          = render partial: 'shared/player', locals: { attr: post.cover_image.split(' ')}
+          = render partial: 'shared/player', locals: { attr: post.cover_image.split(' ', 3)}
         - else
           = image_tag(post.cover_image)
     .post-body
