--- a/app/views/shared/_player.html.erb
+++ b/app/views/shared/_player.html.erb
@@ -1,1 +1,3 @@
-<iframe style="border: 0; width: 700px; height: 700px;" src="//bandcamp.com/EmbeddedPlayer/album=<%= attr[1] %>/size=large/bgcol=333333/linkcol=e32c14/minimal=true/transparent=true/" seamless><a href="<%= attr[0] %>"><%= attr[2] %></a></iframe>
+<iframe src="//bandcamp.com/EmbeddedPlayer/album=<%= attr[1] %>/size=large/bgcol=333333/linkcol=e32c14/minimal=true/transparent=true/" seamless>
+  <a href="<%= attr[0] %>"><%= attr[2] %></a>
+</iframe>
