--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,5 @@
 =render @post
-#comments
+#add_comment
   =render partial: 'comments/form', locals: { post: @post }
-  =render partial: 'comments/comment', collection: @post.comments.all
+#comments
+  =render @comments
