--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,8 +1,13 @@
-.container{id: "#{dom_id(comment)}"}
-  %header
-    = link_to user_path(comment.user) do
-      = gravatar(comment.user)
-      = comment.user.name
-    = comment.created_at.strftime("%H:%M, %d %B %Y")
-  %main
-    = comment.body
+.padding
+  .container{id: "#{dom_id(comment)}"}
+    %header
+      = link_to user_path(comment.user) do
+        = gravatar(comment.user)
+        = comment.user.name
+      = comment.created_at.strftime("%H:%M, %d %B %Y")
+    %main
+      = comment.body
+    - if comment.depth < 4
+      %footer
+        = link_to 'Reply', new_post_comment_path(@post, parent_id: comment.id), remote: true
+  = render partial: 'comments/comment', collection: comment.children if comment.children.present?
