--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -7,7 +7,22 @@
       = comment.created_at.strftime("%H:%M, %d %B %Y")
     %main
       = comment.body
-    - if comment.depth < 4
+    - if comment.depth < 4 || comment.user == current_user
       %footer
-        = link_to 'Reply', new_post_comment_path(@post, parent_id: comment.id), remote: true
-  = render partial: 'comments/comment', collection: comment.children if comment.children.present?
+        - if comment.depth < 4
+          = link_to 'Reply', new_post_comment_path(@post, parent_id: comment.id), remote: true
+        - if comment.user == current_user
+          .comment-buttons
+            = button_to 'Edit',
+                         edit_post_comment_path(@post, comment),
+                         method: :get,
+                         class: 'edit',
+                         remote: true
+            = button_to 'Destroy',
+                         post_comment_path(@post, comment),
+                         class: 'delete',
+                         method: :delete,
+                         data: {confirm: 'Are you sure?'},
+                         remote: true
+  - unless action_name == 'update'
+    = render partial: 'comments/comment', collection: comment.children if comment.children.present?
